update the html

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
 <h1>test</h1>
+<!--MM CLICKPROOF PIXEL--><script src='https://staging-app.marketermagic.com/api/clickproof/bac5f422-5b6-561b9/72489612-a77-2f267'></script><!--END MM CLICKPROOF PIXEL-->
 </body>
 </html>
