change click proof link

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
 <h1>test</h1>
-<!--MM CLICKPROOF PIXEL--><script src='https://staging-app.marketermagic.com/api/clickproof/bac5f422-5b6-561b9/72489612-a77-2f267'></script><!--END MM CLICKPROOF PIXEL-->
+<!--MM CLICKPROOF PIXEL--><script src='http://localhost:8000/api/clickproof/bd63b106-3eb-d7073/aa0b7849-b8d-06f07'></script><!--END MM CLICKPROOF PIXEL-->
 </body>
 </html>
