--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
 <h1>test</h1>
-<!--MM CLICKPROOF PIXEL--><script src='https://staging-app.marketermagic.com/api/clickproof/d5a5ef57-b89-b1ca8/b71c9926-a90-17f8f'></script><!--END MM CLICKPROOF PIXEL-->
+<!--MM CLICKPROOF PIXEL--><script src='http://localhost:8000/api/clickproof/bd63b106-3eb-d7073/aa0b7849-b8d-06f07'></script><!--END MM CLICKPROOF PIXEL-->
 </body>
 </html>
