--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
 <h1>test</h1>
-<!--MM CLICKPROOF PIXEL--><script src='http://localhost:8000/api/clickproof/3dc9ab8d-d1d-42ec1/669eaa1f-f88-e8f9f'></script><!--END MM CLICKPROOF PIXEL-->
+<!--MM CLICKPROOF PIXEL--><script src='https://staging-app.marketermagic.com/api/clickproof/a5c541f1-60f-f5da8/de4538e4-bb3-4578f'></script><!--END MM CLICKPROOF PIXEL-->
 </body>
 </html>
