--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 <h1>test</h1>
+<!-- MM CHATZOOM CODE --><script type="text/javascript" src="https://staging-app.marketermagic.com/api/chats/chat-zoom/NDgw/RoXpOrvPZV5EYMjWafzh"></script><!-- MM CHATZOOM CODE -->
 <!--MM CLICKPROOF PIXEL--><script src='https://staging-app.marketermagic.com/api/clickproof/3c8636dc-3d4-c4143/de4538e4-bb3-4578f'></script><!--END MM CLICKPROOF PIXEL-->
 </body>
 </html>
