--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
 <h1>test</h1>
-<!--MM CLICKPROOF PIXEL--><script src='http://localhost:8000/api/clickproof/51a067fc-f38-d8fb1/669eaa1f-f88-e8f9f'></script><!--END MM CLICKPROOF PIXEL-->
+<!--MM CLICKPROOF PIXEL--><script src='http://192.168.254.105:8000/api/clickproof/51a067fc-f38-d8fb1/669eaa1f-f88-e8f9f'></script><!--END MM CLICKPROOF PIXEL-->
 </body>
 </html>
