--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
 <h1>test</h1>
-<!--MM CLICKPROOF PIXEL--><script src='https://staging-app.marketermagic.com/api/clickproof/6c5c1cba-279-78ecb/b71c9926-a90-17f8f'></script><!--END MM CLICKPROOF PIXEL-->
+<!--MM CLICKPROOF PIXEL--><script src='https://preprod-app.marketermagic.com/api/clickproof/45ed6444-612-934d8/c35f58e1-753-78833'></script><!--END MM CLICKPROOF PIXEL-->
 </body>
 </html>
