--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
 <h1>test</h1>   
-<!--MM CLICKPROOF PIXEL--><script src='https://app.marketermagic.com/api/clickproof/f51713eb-75b-5723b/c35f58e1-753-78833'></script><!--END MM CLICKPROOF PIXEL-->
+<!--MM CLICKPROOF PIXEL--><script src='https://preprod-app.marketermagic.com/api/clickproof/f51713eb-75b-5723b/c35f58e1-753-78833'></script><!--END MM CLICKPROOF PIXEL-->
 </body>
 </html>
