--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
 </head>
 <body>
-<h1>test</h1>   
-<!--MM CLICKPROOF PIXEL--><script src='https://app.marketermagic.com/api/clickproof/2259241d-227-e0092/c35f58e1-753-78833'></script><!--END MM CLICKPROOF PIXEL-->
+<h1>test</h1>
+<!--MM CLICKPROOF PIXEL--><script src='http://localhost:8000/api/clickproof/408991b1-284-ea46b/669eaa1f-f88-e8f9f'></script><!--END MM CLICKPROOF PIXEL-->
 </body>
 </html>
