--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 <h1>test</h1>
-<!--MM CLICKPROOF PIXEL--><script src='http://localhost:8000/api/clickproof/408991b1-284-ea46b/669eaa1f-f88-e8f9f'></script><!--END MM CLICKPROOF PIXEL-->
+<!--MM EmailVerify PIXEL-->
+<script src='http://localhost:8000/api/emailverify/3d31a894-8b4-f490d.js'></script>
+<!--END MM EmailVerify PIXEL-->
 </body>
 </html>
