--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 </head>
 <body>
 <h1>test</h1>
-<!--MM EmailVerify PIXEL-->
+<form action="">
+    <input type="email" id="test-email" name="test-email">
+    <button type="submit" >submit</button>
+</form>
+<!--MM EmailVerify PIXEL--> 
 <script src='http://localhost:8000/api/emailverify/3d31a894-8b4-f490d.js'></script>
 <!--END MM EmailVerify PIXEL-->
 </body>
